...
import com.android.sample.model.skill.MainSubject
import com.android.sample.ui.components.ProposalCard
import com.android.sample.ui.components.RequestCard

/** Test tags for the different elements of the SubjectListScreen */
object SubjectListTestTags {
  const val SEARCHBAR = "SubjectListTestTags.SEARCHBAR"
  const val CATEGORY_SELECTOR = "SubjectListTestTags.CATEGORY_SELECTOR"
  const val LISTING_LIST = "SubjectListTestTags.LISTING_LIST"
  const val LISTING_CARD = "SubjectListTestTags.LISTING_CARD"
  const val LISTING_BOOK_BUTTON = "SubjectListTestTags.LISTING_BOOK_BUTTON"
}

...
